# WhatsAppBotpy

./: __init__.py  config.py  core.py  main.py  pyproject.toml  readme.md  setup.py
plugins/: __init__.py  antipiar.py  autoreply.py  backup.py  logger.py  whitelist.py
utils/: helpers.py  logger.py
whatsappbot/: bot.py  filters.py  router.py  states.py
