[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsappbot"
version = "0.1.0"
description = "Расширяемая библиотека для WhatsApp-ботов"
authors = [{ name = "Phogway" }]
dependencies = [
    "requests",
    "flask",
]
requires-python = ">=3.7"